@@ -1,10 +1,10 @@
 #!/usr/bin/env python
 from __future__ import absolute_import, division, print_function
 
-from argparse import ArgumentParser
+from argparse import ArgumentParser, Namespace  # pylint: disable=unused-import
 from re import search
 from sys import argv
-from typing import BinaryIO, Iterable, List, Optional, Tuple  # pylint: disable=unused-import
+from typing import Any, BinaryIO, Callable, Dict, Iterable, List, Optional, Tuple  # pylint: disable=unused-import
 from urllib import urlretrieve
 try:
     from urllib2 import urlopen
@@ -19,6 +19,31 @@ __author__ = "Davd Naylor <dbn@FreeBSD.org>"
 __license__ = "BSD (FreeBSD)"
 __summary__ = "Generates FreeBSD Ports from CRAN packages"
 __version__ = "0.1.5"
+
+
+class Command(object):
+    def __init__(self, description):
+        # type: (str) -> None
+        self._parser = ArgumentParser(description=description)
+        self._subparsers = self._parser.add_subparsers(title="available sub-commands", help="sub-command help")
+
+    def execute(self, args):
+        # type: (List[str]) -> None
+        parsed_args = self._parser.parse_args(args)
+        parsed_args.action(parsed_args)
+
+    def usage(self):
+        # type: () -> None
+        self._parser.print_usage()
+
+    def __call__(self, verb, description):
+        # type: (str, str) -> Callable[[Callable[[Namespace], None]], ArgumentParser]
+        def decorator(action):
+            # type: (Callable[[Namespace], None]) -> ArgumentParser
+            parser = self._subparsers.add_parser(verb, help=description)
+            parser.set_defaults(action=action)
+            return parser
+        return decorator
 
 
 def make_cran_port(name, portdir=None):
@@ -138,34 +163,26 @@ def generate_update_log(old, new):
         log.write("\nGenerated by:\tportcran (%s)\n" % __version__)
 
 
-def update():
-    # type: () -> None
-    parser = ArgumentParser()
-    parser.add_argument("name", help="Name of the CRAN package")
-    parser.add_argument("-o", "--output", help="Output directory")
-
-    parser.add_argument("-a", "--address", help="Creator/maintainer's e-mail address")
-
-    args = parser.parse_args()
-
-    if args.address is not None:
-        Platform.address = args.address
-
-    port = Ports.get_port_by_name(Cran.PKGNAMEPREFIX + args.name)
-    assert isinstance(port, CranPort)
-    cran = make_cran_port(args.name, args.output)
-    cran.generate()
-    generate_update_log(port, cran)
-
-
 def main():
     # type: () -> None
-    if len(argv) == 1:
-        print("usage: portcran update [-o OUTPUT] name")
-        exit(2)
-    action = argv.pop(1)
-    if action == "update":
-        update()
+    command = Command(__summary__)
+
+    @command("update", "update a CRAN port")
+    def update(args):
+        # type: (Namespace) -> None
+        if args.address is not None:
+            Platform.address = args.address
+
+        port = Ports.get_port_by_name(Cran.PKGNAMEPREFIX + args.name)
+        assert isinstance(port, CranPort)
+        cran = make_cran_port(args.name, args.output)
+        cran.generate()
+        generate_update_log(port, cran)
+    update.add_argument("name", help="name of the CRAN package")
+    update.add_argument("-o", "--output", help="output directory")
+    update.add_argument("-a", "--address", help="creator/maintainer's e-mail address")
+
+    command.execute(argv[1:])
 
 if __name__ == "__main__":
     main()
