@@ -1,5 +1,6 @@
 0.x.y (dd-MMM-yy):
- - Add LocalBaseDependency for '${LOCALBASE}/path/to/file:origin'
+ - feature: add LocalBaseDependency for '${LOCALBASE}/path/to/file:origin'
+ - refactor: add support for multiple sub-commands
 
 0.1.5 (04-Apr-17):
  - feature: update code to be mypy-0.501 compatiable
